Support building a jar.  Use the jar in the demo page.

--- a/demo/yoob.html
+++ b/demo/yoob.html
@@ -8,7 +8,7 @@
 <body style="background-color: #001020; margin: 0; padding: 0;">
 
 <applet id="yoob" code="tc.catseye.yoob.Applet" 
-        codebase="../bin"
+        archive="../yoob.jar"
         width="100%" height="100%">
 <param name="languageClasses" value="tc.catseye.yoob.ale.AleState/Ale
           tc.catseye.yoob.backflip.BackFlipState/BackFlip
