Incorporate Ypsilax and noit o' mnain worb into this repo.

--- a/demo/yoob.html
+++ b/demo/yoob.html
@@ -28,9 +28,9 @@
           tc.catseye.yoob.snusp.SNUSPState/SNUSP
           tc.catseye.yoob.twoill.TwoIllState/2-ill
           tc.catseye.yoob.twol.TwoLState/2L
-          tc.catseye.worb.WorbState/noit-o-mnain-worb
+          tc.catseye.yoob.worb.WorbState/noit-o-mnain-worb
           tc.catseye.yoob.wunnel.WunnelState/Wunnel
-          tc.catseye.ypsilax.YpsilaxState/Ypsilax">
+          tc.catseye.yoob.ypsilax.YpsilaxState/Ypsilax">
 Your browser is ignoring the &lt;applet&gt; tag.
 Please consult your browser documentation for how to enable Java applets.
 </applet>
